[REFACTOR] fix code issue